c/examples/writing-a-c-compiler-tests/tests/chapter_5/valid/extra_credit/incr_parenthesized.c
// Test that we can apply ++ and -- to parenthesized expressions
int main(void) {
    int a = 1;
    int b = 2;
    int c = -++(a);
    int d = !(b)--;
    return (a == 2 && b == 1 && c == -2 && d == 0);
}