c/examples/writing-a-c-compiler-tests/tests/chapter_5/invalid_semantics/extra_credit/postfix_decr_non_lvalue.c
int main(void) {
    int a = 10;
    // This is a semantic error, not a parser error, because it's syntactically
    // valid to apply an arbitrary number of postfix operations to an expression.
    // This is important so we can later support expressions like a++[0]
    return a++--;
}